# yadro3-2026

./: CMakeLists.txt  FileTape.cpp  FileTape.h  MemoryTape.h  README.md  TapeConfig.h  main.cpp  tape_config.ini.example
.github/workflows/: tests.yml
src/: ITape.h  TapeSorter.cpp  TapeSorter.h  TapeSorterTest.cpp  main.cpp
tests/in/: 1.txt  2.txt
